k8s/graphql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: graphql-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: graphql
  template:
    metadata:
      labels:
        component: graphql
    spec:
      containers:
        - name: graphql
          image: alexkatulskiy/bookshelf
          args: ["bundle", "exec", "hanami", "server", "--host=0.0.0.0"]
          command: ["./docker-entrypoint.sh"]
          ports:
            - containerPort: 2300
