k8s/accounts-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: accounts-service
spec:
  type: ClusterIP
  selector:
    component: accounts
  ports:
    - port: 50051
      targetPort: 50051
