k8s/catalog-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalog-service
spec:
  type: ClusterIP
  selector:
    component: catalog
  ports:
    - port: 50051
      targetPort: 50051
