k8s/graphql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: graphql-service
spec:
  type: ClusterIP
  selector:
    component: graphql
  ports:
    - port: 2300
      targetPort: 2300
