k8s/hello-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
spec:
  type: ClusterIP
  selector:
    component: hello
  ports:
    - port: 50051
      targetPort: 50051
