k8s/orders-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders-service
spec:
  type: ClusterIP
  selector:
    component: orders
  ports:
    - port: 50051
      targetPort: 50051
